--- a/play_audio_file.html
+++ b/play_audio_file.html
@@ -1,7 +1,8 @@
 <script type="text/javascript">
     RED.nodes.registerType('play_audio_file',{
         category: 'output',
-        color: '#A10C0C',
+        color: '#FF595F',
+        icon: 'unmute.png',
         defaults: {
         	filename : {value:'/path/to/filename'}
         },
